--- a/views/login.html
+++ b/views/login.html
@@ -1,27 +1,46 @@
+<link href='css/login.css' rel='stylesheet' type='text/css'>
 <div class="container">
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <form action="/login" method="POST">
+  <div class="page-header">
+    <img src=http://www.goodwillgr.org/wp-content/uploads/2013/09/logo-goodwill-full.png /></a<br/>
 
-        <div class="row">
-          <h1 class="col-xs-4 col-xs-offset-4">Good Will</h1>
-        </div>
-        <div class="row">
-          <input class="col-xs-4 col-xs-offset-4" name="email" type="text" placeholder="Email"/>
-        </div>
-        <div class="row">
-          <input class="col-xs-4 col-xs-offset-4" name="password" type="password" placeholder="Password"/>
-        </div>
 
-        <div class="row">
-          <p class="col-xs-4 col-xs-offset-4">{{ message }}</p>
-        </div>
-
-        <div class="row">
-          <button class="btn btn-primary btn-lg col-xs-4 col-xs-offset-4">Login</button>
-        </div>
-      
-      </form>
+    <h1 class="logo">GoodWill </h1>
+    <h1 class="logo"><small>Delaware & Delaware County!</small></h1>
     </div>
+      <div class="panel panel-info">
+      <div class="panel-heading">
+      <h3 class="panel-title">Please Sign In</h3>
+    </div>
+  <div class="panel-body">
+
+    <div class="row">
+
+      <div class="col-md-3" >
+        <br>
+        <br>
+      </div>
+
+      <form action="http://127.0.0.1:3000/login" method="POST">
+        <input name="email" type="text" placeholder="Enter Email" class="form-control input-md">
+        <br>
+        <br>
+        <input name="password" type="password" placeholder="Enter Password" class="form-control input-md">
+        <br>
+        <br>
+        <button id="singlebutton" name="singlebutton" class="btn btn-info btn-sm pull-right">Sign In</button>
+        <p>{{message}}</p>
+
+      </form>
+      </div>
+      <br>
+      <a href="https://www.facebook.com/goodwillde"><img src="http://techulus.com/buttons/fb.png" /></a><br/>
+      <a href="https://twitter.com/goodwillde"><img src="http://techulus.com/buttons/tw.png" /></a><br/>
+      <a href="https://instagram.com/goodwillde/"><img src="https://chadkobzey.files.wordpress.com/2012/12/instagram.png" /></a>
+    </div>
+
   </div>
+</div>
+
+<p><a href="https://www.goodwillde.org/mission/">About</a> Goodwill Delaware</p>
+
 </div>
