--- a/views/signup.html
+++ b/views/signup.html
@@ -1,1 +1,55 @@
-<h1>Signup</h1>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+<div class="container">
+  <div class="row centered-form">
+    <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+      <img src=https://www.irecruit-us.com/display_image.php?OrgID=I20090402&MultiOrgID=&Type=Primary /></a<br/>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Please sign up for Goodwill. <small>It's free!</small></h3>
+          </div>
+        <div class="panel-body">
+        <form action="http://localhost:3000/signup" method="POST">
+        <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="form-group">
+        <input type="text" name="fname" class="form-control input-sm" placeholder="First Name">
+        </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="form-group">
+        <input type="text" name="lname" class="form-control input-sm" placeholder="Last Name">
+        </div>
+        </div>
+        </div>
+
+        <div class="form-group">
+        <input type="email" name="email" class="form-control input-sm" placeholder="Email Address">
+        </div>
+
+        <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="form-group">
+        <input type="password" name="password" class="form-control input-sm" placeholder="Password">
+        </div>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="form-group">
+        <input type="password" name="passwordc" class="form-control input-sm" placeholder="Confirm Password">
+        </div>
+        </div>
+        </div>
+
+        <input type="submit" value="Register" class="btn btn-info btn-block">
+        <p>{{message}}</p>
+
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
