--- a/views/admin/home.html
+++ b/views/admin/home.html
@@ -84,7 +84,7 @@
                         <a href="http://localhost:3000/admin/email"><i class="fa fa-fw fa-table"></i>Email</a>
                     </li>
                     <li>
-                        <a href="feedback.html"><i class="fa fa-fw fa-edit"></i> Feedback</a>
+                        <a href="http://localhost:3000/admin/feedback"><i class="fa fa-fw fa-edit"></i> Feedback</a>
                     </li>
                 </ul>
             </div>
