--- a/views/admin/email.html
+++ b/views/admin/email.html
@@ -126,7 +126,7 @@
                       <a href="email.html"><i class="fa fa-fw fa-table"></i>Email</a>
                   </li>
                   <li>
-                      <a href="feedback.html"><i class="fa fa-fw fa-edit"></i> Feedback</a>
+                      <a href="http://localhost:3000/admin/feedback"><i class="fa fa-fw fa-edit"></i> Feedback</a>
                   </li>
                 </ul>
             </div>
