--- a/views/admin/feedback.html
+++ b/views/admin/feedback.html
@@ -3,29 +3,14 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Goodwill Site Admin - Bootstrap Admin Template</title>
-
   <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link href="/sb-admin.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
+  <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -43,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Goodwill Site Admin</a>
+        <a class="navbar-brand" href="http://localhost:3000/admin/home">Goodwill Site Admin</a>
       </div>
       <!-- Top Menu Items -->
       <ul class="nav navbar-right top-nav">
@@ -57,7 +42,7 @@
                     <img class="media-object" src="http://placehold.it/50x50" alt="">
                   </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong>Site Admin</strong>
                     </h5>
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                     <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -132,16 +117,16 @@
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
           <li class="active">
-            <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            <a href="http://localhost:3000/admin/home"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
           </li>
           <li>
             <a href="statistics.html"><i class="fa fa-fw fa-bar-chart-o"></i>Statistics</a>
           </li>
           <li>
-            <a href="email.html"><i class="fa fa-fw fa-table"></i>Email</a>
+            <a href="http://localhost:3000/admin/email"><i class="fa fa-fw fa-table"></i>Email</a>
           </li>
           <li class="active">
-            <a href="feedback.html"><i class="fa fa-fw fa-edit"></i> Feedback</a>
+            <a href="http://localhost:3000/admin/feedback"><i class="fa fa-fw fa-edit"></i> Feedback</a>
           </li>
         </ul>
 
@@ -157,29 +142,31 @@
         <div class="row">
           <div class="col-lg-12">
             <h1 class="page-header">
-              Tables
+             Feedback 
             </h1>
             <ol class="breadcrumb">
               <li>
-                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                <i class="fa fa-dashboard"></i>  <a href="http://localhost:3000/admin/home">Dashboard</a>
               </li>
               <li class="active">
-                <i class="fa fa-table"></i> Tables
+                <i class="fa fa-table"></i>Feedback 
               </li>
             </ol>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4">
+            {{#each comments}}
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Feedback #1</h3>
+                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Comment</h3>
               </div>
               <div class="panel-body">
-                <p> Here is some feedback </p>
+                <p>{{body}}</p>
 
               </div>
             </div>
+            {{/each}}
           </div>
         </div>
       </div>
