--- a/views/admin/feedback.html
+++ b/views/admin/feedback.html
@@ -120,7 +120,7 @@
             <a href="http://localhost:3000/admin/home"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
           </li>
           <li>
-            <a href="statistics.html"><i class="fa fa-fw fa-bar-chart-o"></i>Statistics</a>
+            <a href="http://localhost:3000/admin/stats"><i class="fa fa-fw fa-bar-chart-o"></i>Statistics</a>
           </li>
           <li>
             <a href="http://localhost:3000/admin/email"><i class="fa fa-fw fa-table"></i>Email</a>
@@ -128,6 +128,9 @@
           <li class="active">
             <a href="http://localhost:3000/admin/feedback"><i class="fa fa-fw fa-edit"></i> Feedback</a>
           </li>
+                    <li>
+                        <a href="http://localhost:3000/admin/invite"><i class="fa fa-fw fa-edit"></i> Invite</a>
+                    </li>
         </ul>
 
       </div>
