--- a/views/admin/home.html
+++ b/views/admin/home.html
@@ -86,6 +86,9 @@
                     <li>
                         <a href="http://localhost:3000/admin/feedback"><i class="fa fa-fw fa-edit"></i> Feedback</a>
                     </li>
+                    <li>
+                        <a href="http://localhost:3000/admin/invite"><i class="fa fa-fw fa-edit"></i> Invite</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
