--- a/views/admin/invite.html
+++ b/views/admin/invite.html
@@ -165,6 +165,10 @@
                             <div class="form-group">
                                 <label>Email</label>
                                 <input name="email" class="form-control"/>
+                                <label>First Name</label>
+                                <input name="fname" class="form-control"/>
+                                <label>Last Name</label>
+                                <input name="lname" class="form-control"/>
                             </div>
                             <button class="btn btn-default">
                               Send Email
